--- a/ask_questions_about_research_papers to LLMs.ipynb
+++ b/ask_questions_about_research_papers to LLMs.ipynb
@@ -5,7 +5,7 @@
    "id": "5065cbca-a35b-4028-85f6-923d81f347ca",
    "metadata": {},
    "source": [
-    "<img src=\"ask questions to LLMs.jpg\" width=70%>"
+    "<img src=\"ask questions to LLMs what.jpg\" width=70%>"
    ]
   },
   {
